# example-server

./: Dockerfile  README.md  config.yaml  docker-compose.yaml  manage.py  pyproject.toml  run-debug.sh  run.sh  tmanage.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-build.yaml  docker-dev.yaml  tests.yaml
core/: admin.py  channels.py  datalayer.py  duck.py  enums.py  fields.py  filters.py  inputs.py  logic.py  managers.py  models.py  pagination.py  scalars.py  signals.py  type_gen.py  types.py  utils.py
core/graphql/mutations/: __init__.py  block.py  dataset.py  environment.py  experiment.py  file.py  model_collection.py  neuron_model.py  roi.py  simulation.py  trace.py  upload.py
core/graphql/queries/: trace.py
core/graphql/subscriptions/: __init__.py  files.py  rois.py  traces.py
core/migrations/: 0001_initial.py
core/render/: enums.py
core/render/inputs/: models.py  types.py
core/render/objects/: models.py  types.py
elektro_server/: asgi.py  schema.py  settings.py  urls.py
example_server/: asgi.py  schema.py  settings.py  settings_test.py  wsgi.py
tests/: conftest.py  test_create_trace.py  test_s3.py
